# modelradar

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
DS24/: README.md  requirements.txt
DS24/codebase/evaluation/: workflow.py
DS24/codebase/load_data/: base.py  config.py  tourism.py
DS24/experiments/analysis/: 0_data_summary.py  2_by_series.py  4_by_anomalies.py
DS24/experiments/run/: 1_run_classical_by_series.py  2_merge_by_series.py  3_run_neural.py
assets/: cv.csv
codebase/evaluation/: plotting.py  rope.py  workflow.py
codebase/features/: ndiffs.py
codebase/load_data/: config.py  m3.py  m4.py
exp_utils/: config_sf.py  models_config.py
exp_utils/load_data/: base.py  config.py  gluonts.py  m3.py  tourism.py
experiments/: dev.py
experiments/analysis/: 0_data_summary.py  1_unconditional_summary.py  2_by_series.py  3_by_hard_probs.py  5_by_adf.py
experiments/run/: 1_run_classical_by_series.py  2_merge_by_series.py  3_run_neural.py  4_merge_over_groups.py
modelradar/evaluate/: losses.py  radar.py  rope.py
modelradar/pipelines/: data_splits.py  utils.py
modelradar/utils/: data.py
modelradar/visuals/: config.py  plotter.py  plotting.py
notebooks/: 0_run_experiments.ipynb  1_modelradar_example.ipynb  cv.csv
scripts/: 0_cv_example.py  1_radar.py
